Show background data when edited